--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/java/com/jobType/model/JobTypeDAO.java=MS950
 encoding//src/main/resources=UTF-8
 encoding/<project>=UTF-8
